src/validation/tests/snapshots/rusty__validation__tests__builtin_validation_tests__arithmetic_builtins_called_with_invalid_param_count.snap
---
source: src/validation/tests/builtin_validation_tests.rs
expression: "&diagnostics"
---
error[E032]: this POU takes 2 arguments but 0 arguments were supplied
  ┌─ <internal>:7:13
  │
7 │             ADD();
  │             ^^^ this POU takes 2 arguments but 0 arguments were supplied

error[E064]: Could not resolve generic type T with ANY_NUMBER
  ┌─ <internal>:7:13
  │
7 │             ADD();
  │             ^^^^^^ Could not resolve generic type T with ANY_NUMBER

error[E032]: this POU takes 2 arguments but 1 argument were supplied
  ┌─ <internal>:8:13
  │
8 │             MUL(x1);
  │             ^^^ this POU takes 2 arguments but 1 argument were supplied

error[E032]: this POU takes 2 arguments but 4 arguments were supplied
  ┌─ <internal>:9:13
  │
9 │             DIV(x2, x2, x1, x2); // DIV and SUB are not extensible
  │             ^^^ this POU takes 2 arguments but 4 arguments were supplied

error[E032]: this POU takes 2 arguments but 4 arguments were supplied
   ┌─ <internal>:10:13
   │
10 │             SUB(x2, x2, x1, x2);
   │             ^^^ this POU takes 2 arguments but 4 arguments were supplied
